# SpaceShooter

./: .gitignore  .vimspector.json  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  cords.txt  game_core
build_linux/: DartConfiguration.tcl
common/: quaternion_utils.hpp  shader.cpp  texture.cpp
res/: CubeMap.GLSL  StandardShading.GLSL  StandardShadingVert.GLSL  init.txt  render_objects.txt  test.txt  types.txt
res/textures/: MyTest.DDS  textures.txt  untitled.dds
res/textures/skybox/: UVImage.dds  skybox.DDS
src/: game_core.cpp  globals.hpp
src/addlibs/: MyDict.cpp  MyNum.cpp  MyNum.hpp  MyObject.cpp  matrix.cpp  matrix.hpp
src/andrei/: andrei_main.cpp  matrix.cpp
src/rend/: cub_map.hpp  load.h  load.hpp  objloader.cpp  render.cpp  render.hpp  render_camera.h  render_camera.hpp  render_engine.cpp  render_engine.h  render_mesh.h  render_mesh.hpp  render_object.h  render_object.hpp
src/serg/: Player_Actions.h  serg_main.cpp
